[S010]: Seed service and Joinville catalogs
